# ralph-loop

./: .gitignore  README.md  pyproject.toml  setup.py  test_git_commit.py  test_multiphase.py  test_resilient_scenario.py
.github/workflows/: test.yml
docs/: ADVANCED.md  ECC_INTEGRATION_PHASE1.md  ECC_INTEGRATION_PHASE2.md  ECC_INTEGRATION_PHASE3.md
ralph/: __init__.py  analyzer.py  architecture_refiner.py  cli.py  doctor.py  improver.py  initializer.py  orchestrator.py  parsers.py  paths.py  prompt_loader.py  prompts.py  providers.py  refiner.py  transformers.py  validator.py
ralph/prompts/: analysis.txt  architecture.txt  architecture_refinement.txt  execution.txt  refinement.txt  roadmap.txt  tech_stack_detection.txt
ralph/renderers/: __init__.py  __main__.py  qwen_renderer.py  simple_renderer.py
ralph/schemas/: __init__.py  backlog.schema.json  tech_stack.schema.json
tests/: README.md  __init__.py  test_infrastructure.py  test_init.py
tests/e2e/: __init__.py  conftest.py  test_e2e_init.py
tests/helpers/: __init__.py  assertions.py  mock_provider.py  test_environment.py
tests/integration/: __init__.py
