[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-loop"
version = "1.0.0"
description = "Provider-agnostic orchestration loop for agent-driven development"
authors = [{name = "Mental-NV"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.0.0",
]

[project.scripts]
ralph = "ralph.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ralph*"]

[tool.setuptools.package-data]
ralph = ["schemas/*.json"]
